Am Layout gearbeitet

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ---
 layout: post-index
 title: Latest Posts
-description: "Describe this nonsense."
-tags: [Jekyll, theme, themes, responsive, blog, modern]
+description: "Geräusche aus dem Maschinenraum"
+tags: [Tech, Kontext E]
 comments: false
 image:
-  feature: abstract-1.jpg
+  feature: header-1.jpg
 ---
 
 {% for post in paginator.posts %}
